2008-10-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (daemon_pipe): Make non-static.
	(IS_DAEMON): Move definition ...
	* lisp.h (IS_DAEMON): ... here.
	(daemon_pipe): Declare.
	(is_daemon): Remove.
	* dispnew.c (init_display): Use IS_DAEMON.

2008-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (pos_visible_p, redisplay_internal, message3_nolog)
	(message2_nolog): Check FRAME_INITIAL_P instead of noninteractively.

	* emacs.c (is_daemon): Remove.
	(main): Don't set is_daemon.
	(IS_DAEMON): New macro.
	(Fdaemonp, Fdaemon_initialized): Use it.
	(Fdaemon_initialized): Wrtie a char into the pipe to make sure the
	parent exits.
	(syms_of_emacs): Explicitly initialize daemon_pipe[1].

2008-10-27  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_draw_window_cursor): When hbar cursor is on
	over-sized glyph, draw it with the default glyph width.

	* w32term.c (x_draw_bar_cursor): When hbar cursor is on over-sized
	glyph, draw it with the default glyph width.

	* xterm.c (x_draw_bar_cursor): When hbar cursor is on over-sized
	glyph, draw it with the default glyph width.

	* xdisp.c (try_scrolling): When computing the distance from the
	scroll margin to PT, try moving some distance past the window
	bottom before giving up.

2008-10-27  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fwindow_dedicated_p, Fset_window_dedicated_p)
	(Fset_window_buffer): Explain in doc-string that a window can be
	"strongly" dedicated to its buffer.

2008-10-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (daemon_name): New variable.
	(main): Deal with --daemon=SERVER_NAME.
	(Fdaemonp): Return a name if one was passed to --daemon.

2008-10-26  Romain Francoise  <romain@orebokech.com>

	* emacs.c (daemon_pipe): New variable.
	(main): Create a pipe before forking, make the parent exit only after
	the child has closed its end of the pipe.  Move closing the
	descriptors ...
	(Fdaemon_initialized): ... here.  New function.
